[package]
name = "sudoku"
version = "0.2.2"
authors = ["Guy Vreuls"]
description = "A sudoku solving filter."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = false

[dependencies]
